feat(i18n): système anti-oubli complet avec validation stricte
- Ajout fichiers de traduction unifiés (fr/en/es/pt-br/ar.json) - 400 clés
- Hook useStrictTranslation avec mode fail en production
- Script i18n-strict-validate.ts pour validation build-time
- ESLint renforcé pour détecter textes hardcodés
- Composant TranslationGuard pour debug visuel
- Checklist de validation I18N-CHECKLIST.md
- Scripts npm: i18n:strict, i18n:check, lint:i18n
- Audit et correction des traductions existantes

--- a/src/i18n/locales/ar/brochure.json
+++ b/src/i18n/locales/ar/brochure.json
@@ -1,5 +1,41 @@
 {
-  "title": "كتيب LLEDO Industries",
-  "download": "تحميل الكتيب",
-  "description": "اكتشف عرضنا الكامل من الخدمات ومعدات GSE في كتيبنا المؤسسي."
+  "badge": "الوثائق التقنية",
+  "title": "تحميل كتيبنا",
+  "subtitle": "الوصول إلى جميع وثائقنا التقنية: حظيرة الآلات، الشهادات، وسائل التحكم والقدرات.",
+  "downloadAll": "تحميل الكتيب الكامل",
+  "items": [
+    {
+      "title": "حظيرة الآلات",
+      "description": "قائمة كاملة بمعداتنا CNC 3 و4 و5 محاور، قدرات التصنيع",
+      "size": "PDF - 2.3 Mo"
+    },
+    {
+      "title": "الأدوات المعلوماتية",
+      "description": "برامج CAD/CAM، ERP، أنظمة إدارة الإنتاج",
+      "size": "PDF - 1.8 Mo"
+    },
+    {
+      "title": "عملية الجودة",
+      "description": "ISO 9001، EN 9100، التبادلية AIRBUS، المؤهلات",
+      "size": "PDF - 3.1 Mo"
+    },
+    {
+      "title": "وسائل التحكم",
+      "description": "التحكم ثلاثي الأبعاد، القياس، منصات الاختبار، معدات القياس",
+      "size": "PDF - 2.5 Mo"
+    },
+    {
+      "title": "القدرات التقنية",
+      "description": "التفاوتات، المواد القابلة للتصنيع، معالجات السطح المتاحة",
+      "size": "PDF - 2.0 Mo"
+    },
+    {
+      "title": "البنية التحتية",
+      "description": "مساحة الورش، مناطق التخزين، القدرات اللوجستية",
+      "size": "PDF - 1.5 Mo"
+    }
+  ],
+  "downloadButton": "تحميل",
+  "downloadAlert": "تحميل \"{{title}}\" - الوظيفة قادمة قريباً. ستكون ملفات PDF متاحة قريباً.",
+  "downloadCompleteAlert": "تحميل الكتيب الكامل - الوظيفة قادمة قريباً. سيكون ملف PDF متاحاً قريباً."
 }
