--- a/src/i18n/locales/ar/cases.json
+++ b/src/i18n/locales/ar/cases.json
@@ -22,5 +22,88 @@
     "title": "مشروعك يهمنا",
     "subtitle": "اتصل بفريقنا لمناقشة احتياجاتك واكتشاف كيف يمكننا مرافقتك.",
     "button": "اتصل بنا"
-  }
+  },
+  "caseStudies": [
+    {
+      "id": "aviation-civile-1",
+      "client": "شركة طيران أوروبية كبرى",
+      "sector": "الطيران المدني",
+      "location": "فرنسا",
+      "title": "تحسين سلسلة إنتاج المروحيات",
+      "challenge": "احتاجت شركة طيران أوروبية كبرى إلى تحديث أسطول عربات النقل لخط تجميع المروحيات الخفيفة. كان النظام القديم متقادماً وغير مريح ولا يسمح بالاستجابة لمعدلات الإنتاج المتزايدة.",
+      "solution": "طورت LLEDO AEROTOOLS حلاً مخصصاً مع تعديلات محددة: نظام هيدروليكي بتحكم مريح، زلاجات معززة للاستخدام المكثف، نظام قفل سريع وطلاء مضاد للخدش.",
+      "results": [
+        "تقليل كبير في وقت النقل",
+        "تحسين ظروف العمل",
+        "زيادة معدل الإنتاج",
+        "عائد استثمار سريع",
+        "توسيع الطلب لعدة وحدات إضافية"
+      ],
+      "stats": {
+        "gain": "الكفاءة",
+        "roi": "سريع",
+        "units": "متعدد"
+      },
+      "testimonial": {
+        "quote": "حولت عربات LLEDO خط إنتاجنا. الموثوقية والراحة في المستوى المطلوب.",
+        "author": "جان مارك د.",
+        "position": "مسؤول الإنتاج"
+      },
+      "image": "/images/case-studies/aviation.jpg"
+    },
+    {
+      "id": "securite-civile",
+      "client": "خدمة الإنقاذ الجوي الحكومية",
+      "sector": "الإنقاذ والطوارئ",
+      "location": "فرنسا",
+      "title": "نشر سريع لعمليات الطوارئ",
+      "challenge": "احتاجت قاعدة إنقاذ جوي حكومية إلى معدات GSE تسمح بنشر فائق السرعة لمروحيات التدخل.",
+      "solution": "صممت LLEDO DEFENSE عربة نقل خاصة \"Rapid Deploy\": نظام هيدروليكي بتشغيل فوري، تحكم لاسلكي، استقلالية بطارية 72 ساعة.",
+      "results": [
+        "تقليل كبير في وقت التحضير",
+        "إمكانية التشغيل بمشغل واحد",
+        "تحسين التوفر التشغيلي",
+        "موثوقية مثبتة في ظروف حقيقية",
+        "اعتماده من قبل قواعد تدخل أخرى"
+      ],
+      "stats": {
+        "gain": "السرعة",
+        "roi": "فوري",
+        "units": "متعدد"
+      },
+      "testimonial": {
+        "quote": "في عمليات الطوارئ، السرعة حيوية. نظام LLEDO يوفر لنا 3 إلى 4 دقائق في كل إقلاع.",
+        "author": "القائد بيير ل.",
+        "position": "رئيس قاعدة التدخل"
+      },
+      "image": "/images/case-studies/urgences.jpg"
+    },
+    {
+      "id": "aviation-offshore",
+      "client": "مشغل بحري أوروبي",
+      "sector": "الطيران البحري",
+      "location": "فرنسا",
+      "title": "صيانة وقائية لأسطول بحري",
+      "challenge": "كان مشغل مروحيات بحرية كبير يسعى لتوحيد معدات الصيانة في قواعده الثلاث الفرنسية.",
+      "solution": "قدمت LLEDO Industries مجموعة كاملة: عربات نقل معيارية، منصات وصول تلسكوبية، أدوات صيانة من الفولاذ المقاوم للصدأ 316L.",
+      "results": [
+        "توحيد كامل في عدة قواعد",
+        "تقليل أوقات التوقف",
+        "موثوقية مثبتة على مدى عدة سنوات",
+        "شهادة IOGP",
+        "تمديد العقد للقواعد الدولية"
+      ],
+      "stats": {
+        "gain": "الموثوقية",
+        "roi": "مثبت",
+        "units": "متعدد"
+      },
+      "testimonial": {
+        "quote": "موثوقية معدات LLEDO في البيئة البحرية استثنائية. بعد 3 سنوات، لا توجد علامات تآكل.",
+        "author": "مارك س.",
+        "position": "مدير الصيانة"
+      },
+      "image": "/images/case-studies/offshore.jpg"
+    }
+  ]
 }
