--- a/src/i18n/locales/ar/common.json
+++ b/src/i18n/locales/ar/common.json
@@ -1,4 +1,15 @@
 {
+  "seo": {
+    "home": {
+      "title": "LLEDO Industries - الهندسة والتصنيع والصيانة | الطيران والدفاع",
+      "description": "LLEDO Industries - مجموعة صناعية متكاملة: الهندسة والتصنيع الدقيق والصيانة لقطاع الطيران والدفاع. 70 موظفاً، معتمدة ISO 9001 و EN 9100."
+    }
+  },
+  "topBar": {
+    "products": "منتجات Aerotools",
+    "recruitment": "التوظيف",
+    "brochure": "كتيب PDF"
+  },
   "nav": {
     "home": "الرئيسية",
     "expertises": "مجموعة LLEDO",
@@ -19,6 +30,15 @@
     "subheadline": "الهندسة والتصنيع الدقيق والصيانة الصناعية لقطاع الطيران والدفاع منذ عام 1989. تجمع من الخبراء يضم MPEB وEGI وFREM وMGP لإدارة مشاريعكم من البداية إلى النهاية.",
     "ctaPrimary": "اتصل بنا",
     "ctaSecondary": "اكتشف شركاتنا",
+    "discoverEntities": "اكتشف كياناتنا",
+    "discover": "اكتشف",
+    "scroll": "Scroll",
+    "companies": {
+      "mpeb": { "desc": "التصنيع الدقيق", "detail": "تصنيع القطع الفردية" },
+      "egi": { "desc": "مكتب الدراسات", "detail": "الهندسة المتكاملة" },
+      "frem": { "desc": "الصيانة", "detail": "الاستجابة السريعة وقابلية التبادل" },
+      "mgp": { "desc": "الصفائح المعدنية", "detail": "تصنيع من 3 إلى 5 محاور" }
+    },
     "badges": {
       "compliance": "تصنيع الأدوات والتكامل الصناعي",
       "experience": "قابلية تبادل المكونات",
@@ -39,6 +59,12 @@
   "features": {
     "title": "لماذا تختار LLEDO Industries؟",
     "subtitle": "خبرة تقنية معترف بها والتزام بالجودة لتلبية احتياجاتكم الصناعية.",
+    "stats": {
+      "team": { "label": "فريق خبير", "value": "الخبرة" },
+      "capacity": { "label": "القدرة الصناعية", "value": "الإنتاج" },
+      "reach": { "label": "الانتشار", "value": "دولي" },
+      "quality": { "label": "الالتزام بالجودة", "value": "التميز" }
+    },
     "list": [
       {
         "title": "الامتثال للمعايير",
