--- a/src/i18n/locales/ar/expertises.json
+++ b/src/i18n/locales/ar/expertises.json
@@ -121,5 +121,39 @@
     "title": "هل تحتاج شريكاً صناعياً متكاملاً؟",
     "subtitle": "اتصل بنا لمناقشة مشروعك واكتشاف كيف يمكن لتخصصاتنا تلبية احتياجاتك.",
     "button": "طلب عرض أسعار"
+  },
+  "pages": {
+    "common": {
+      "contactUs": "اتصل بنا",
+      "getQuote": "طلب عرض أسعار",
+      "ourExpertise": "خبرتنا",
+      "technicalCapabilities": "القدرات التقنية",
+      "capacity": "القدرة",
+      "precision": "الدقة",
+      "equipment": "المعدات",
+      "photosComingSoon": "صور الورشة قريباً",
+      "needQuote": "هل تحتاج عرض أسعار أو معلومات؟",
+      "allCompanies": "جميع شركاتنا"
+    },
+    "mpeb": {
+      "seoTitle": "MPEB - التصنيع الدقيق للطيران",
+      "seoDescription": "متخصصون في التصنيع الدقيق لقطاع الطيران. تصنيع 3 و4 و5 محاور، خراطة وتفريز عالي الدقة.",
+      "ctaDescription": "فريق MPEB تحت تصرفكم لتلبية احتياجاتكم في التصنيع الدقيق."
+    },
+    "egi": {
+      "seoTitle": "EGI - مكتب الدراسات والهندسة",
+      "seoDescription": "مكتب دراسات متخصص في التصميم الميكانيكي وحسابات الهياكل وتطوير الحلول المخصصة.",
+      "ctaDescription": "فريق EGI تحت تصرفكم لتلبية احتياجاتكم الهندسية."
+    },
+    "frem": {
+      "seoTitle": "FREM - الصيانة الصناعية والتركيب",
+      "seoDescription": "صيانة وقائية وتصحيحية، تركيب المعدات في الموقع والدعم التقني للصناعة.",
+      "ctaDescription": "فريق FREM تحت تصرفكم لتلبية احتياجاتكم في الصيانة."
+    },
+    "mgp": {
+      "seoTitle": "MGP - الصفائح المعدنية والتجميع",
+      "seoDescription": "متخصصون في الصفائح المعدنية واللحام وتجميع العناصر الميكانيكية.",
+      "ctaDescription": "فريق MGP تحت تصرفكم لتلبية احتياجاتكم في الصفائح المعدنية."
+    }
   }
 }
