--- a/src/i18n/locales/pt-BR/common.json
+++ b/src/i18n/locales/pt-BR/common.json
@@ -1,4 +1,15 @@
 {
+  "seo": {
+    "home": {
+      "title": "LLEDO Industries - Engenharia, Usinagem e Manutenção | Aeronáutica e Defesa",
+      "description": "LLEDO Industries - Grupo industrial integrado: engenharia, usinagem de precisão e manutenção para aeronáutica e defesa. 70 colaboradores, certificado ISO 9001 e EN 9100."
+    }
+  },
+  "topBar": {
+    "products": "Produtos Aerotools",
+    "recruitment": "Carreiras",
+    "brochure": "Catálogo PDF"
+  },
   "nav": {
     "home": "Início",
     "expertises": "Grupo LLEDO",
@@ -19,6 +30,15 @@
     "subheadline": "Engenharia, usinagem de precisão e manutenção industrial para aeronáutica e defesa desde 1989. Um coletivo de especialistas reunindo MPEB, EGI, FREM e MGP para gerenciar seus projetos do início ao fim.",
     "ctaPrimary": "Entre em Contato",
     "ctaSecondary": "Conheça Nossas Empresas",
+    "discoverEntities": "Conheça nossas entidades",
+    "discover": "Descobrir",
+    "scroll": "Scroll",
+    "companies": {
+      "mpeb": { "desc": "Usinagem de precisão", "detail": "Fabricação de peças unitárias" },
+      "egi": { "desc": "Escritório técnico", "detail": "Engenharia integrada" },
+      "frem": { "desc": "Manutenção", "detail": "Reatividade e intercambialidade" },
+      "mgp": { "desc": "Caldeiraria e chapas", "detail": "Usinagem de 3 a 5 eixos" }
+    },
     "badges": {
       "compliance": "Fabricação de ferramental e integração industrial",
       "experience": "Intercambialidade de componentes",
@@ -39,6 +59,12 @@
   "features": {
     "title": "Por que escolher a LLEDO Industries?",
     "subtitle": "Expertise técnica reconhecida e compromisso com a qualidade para atender às suas necessidades industriais.",
+    "stats": {
+      "team": { "label": "Equipe especializada", "value": "Know-how" },
+      "capacity": { "label": "Capacidade industrial", "value": "Produção" },
+      "reach": { "label": "Alcance", "value": "Internacional" },
+      "quality": { "label": "Compromisso com qualidade", "value": "Excelência" }
+    },
     "list": [
       {
         "title": "Conformidade Normativa",
